feat - demo app wkwebview implementation

--- a/ApisterKitDemo/Base.lproj/Main.storyboard
+++ b/ApisterKitDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,13 +22,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bQy-Cs-LtW">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bQy-Cs-LtW" userLabel="TopView">
                                 <rect key="frame" x="0.0" y="20" width="375" height="66.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4lz-wR-aGB">
-                                        <rect key="frame" x="37.5" y="17.5" width="300" height="33.5"/>
+                                        <rect key="frame" x="37.5" y="16.5" width="300" height="33.5"/>
                                         <color key="backgroundColor" red="1" green="0.3938194277" blue="0.33497467330000003" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="Send Device Data To Javascript">
+                                        <state key="normal" title="Load Apester Unit">
                                             <color key="titleColor" red="0.30980393290000002" green="0.015686275440000001" blue="0.1294117719" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
@@ -44,25 +44,25 @@
                                     <constraint firstItem="4lz-wR-aGB" firstAttribute="centerY" secondItem="bQy-Cs-LtW" secondAttribute="centerY" id="z5h-Ti-nQL"/>
                                 </constraints>
                             </view>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4NP-Ps-OMw">
-                                <rect key="frame" x="0.0" y="87" width="375" height="580"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </webView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gaI-dZ-Yjr" userLabel="WebViewContainer">
+                                <rect key="frame" x="0.0" y="86.5" width="375" height="580.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="4NP-Ps-OMw" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="39I-Pj-WT1"/>
-                            <constraint firstItem="4NP-Ps-OMw" firstAttribute="top" secondItem="bQy-Cs-LtW" secondAttribute="bottom" id="627-15-hfG"/>
-                            <constraint firstItem="4NP-Ps-OMw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AVV-9l-Wbg"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="gaI-dZ-Yjr" secondAttribute="bottom" id="35M-kH-bnA"/>
+                            <constraint firstItem="gaI-dZ-Yjr" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="7AZ-D8-5y8"/>
+                            <constraint firstItem="gaI-dZ-Yjr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="99j-cb-0E1"/>
+                            <constraint firstItem="gaI-dZ-Yjr" firstAttribute="top" secondItem="bQy-Cs-LtW" secondAttribute="bottom" id="FmN-Vu-mFb"/>
                             <constraint firstItem="bQy-Cs-LtW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Yfl-EM-sF4"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4NP-Ps-OMw" secondAttribute="bottom" id="bgT-lH-dIe"/>
                             <constraint firstItem="bQy-Cs-LtW" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="mHT-PD-0kJ"/>
                             <constraint firstItem="bQy-Cs-LtW" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="mRS-4N-HYY"/>
                             <constraint firstItem="bQy-Cs-LtW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zpZ-uL-3BY"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="webView" destination="4NP-Ps-OMw" id="xZs-zT-M28"/>
+                        <outlet property="webViewContainer" destination="gaI-dZ-Yjr" id="hM7-39-NF2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
