support swift 4 and swift 3 versions

--- a/ApisterKitDemo/Base.lproj/Main.storyboard
+++ b/ApisterKitDemo/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="tYg-bc-IMf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="tYg-bc-IMf">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -44,6 +44,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="4lz-wR-aGB" secondAttribute="trailing" constant="11" id="RRq-uf-Ch7"/>
                                     <constraint firstItem="4lz-wR-aGB" firstAttribute="width" secondItem="bQy-Cs-LtW" secondAttribute="width" multiplier="0.12" id="SPd-rj-alN"/>
                                     <constraint firstItem="iVC-H4-RtA" firstAttribute="centerY" secondItem="bQy-Cs-LtW" secondAttribute="centerY" id="j16-ZO-7k2"/>
                                     <constraint firstItem="iVC-H4-RtA" firstAttribute="centerX" secondItem="bQy-Cs-LtW" secondAttribute="centerX" multiplier="0.85" id="roL-3U-neW"/>
@@ -121,6 +122,7 @@
                                     <constraint firstItem="eMU-cD-euW" firstAttribute="height" secondItem="Jw8-MK-Lkr" secondAttribute="height" multiplier="0.7" id="bfg-nI-Wjj"/>
                                     <constraint firstItem="eMU-cD-euW" firstAttribute="centerY" secondItem="Jw8-MK-Lkr" secondAttribute="centerY" id="jT7-8a-lB4"/>
                                     <constraint firstItem="5D3-Xn-1BY" firstAttribute="centerX" secondItem="Jw8-MK-Lkr" secondAttribute="centerX" multiplier="0.85" id="lQ3-1w-LyI"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="eMU-cD-euW" secondAttribute="trailing" constant="11" id="sfo-Sw-4pC"/>
                                     <constraint firstItem="eMU-cD-euW" firstAttribute="leading" secondItem="5D3-Xn-1BY" secondAttribute="trailing" multiplier="1.03" id="xo2-5m-TMe"/>
                                 </constraints>
                             </view>
@@ -158,6 +160,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="tYg-bc-IMf" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="5eH-0v-hhL">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
