--- a/ApisterKitDemo/Main.storyboard
+++ b/ApisterKitDemo/Main.storyboard
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UwZ-KA-kts">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="oXn-ea-6sv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--ApesterKit Demo-->
+        <!--Multiple Apester Units-->
         <scene sceneID="huX-kZ-FKY">
             <objects>
                 <tableViewController id="qWs-3Z-apY" customClass="APETableViewController" customModule="ApisterKitDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ZoH-49-ak5">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="separatorColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -23,29 +24,155 @@
                             <outlet property="delegate" destination="qWs-3Z-apY" id="yHr-hW-wVc"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ApesterKit Demo" leftItemsSupplementBackButton="YES" id="2zR-XF-UbE"/>
+                    <navigationItem key="navigationItem" title="Multiple Apester Units" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="never" id="2zR-XF-UbE"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bso-1c-AWJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1180" y="128.18590704647679"/>
+            <point key="canvasLocation" x="1938" y="834"/>
+        </scene>
+        <!--ApesterKit Demo-->
+        <scene sceneID="QTM-lg-cc7">
+            <objects>
+                <tableViewController id="LMb-PD-XyA" customClass="APEHomeTableViewController" customModule="ApisterKitDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Ckd-Cj-vZS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <sections>
+                            <tableViewSection id="CMa-K5-aoY">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="CFn-6n-8g1" rowHeight="78" style="IBUITableViewCellStyleDefault" id="rkc-vT-Uu3">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rkc-vT-Uu3" id="HuX-1X-DIu">
+                                            <rect key="frame" x="0.0" y="0.0" width="341" height="77.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Website With Embeded Apester Unit" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="CFn-6n-8g1">
+                                                    <rect key="frame" x="16" y="0.0" width="324" height="77.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="HxZ-9m-hf0" kind="push" id="KCr-Mz-ZMu"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection id="8iz-Sl-UWI">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="MD4-uu-SvT" rowHeight="78" style="IBUITableViewCellStyleDefault" id="L5J-jV-3Cu">
+                                        <rect key="frame" x="0.0" y="78" width="375" height="78"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="L5J-jV-3Cu" id="q1E-6h-eYO">
+                                            <rect key="frame" x="0.0" y="0.0" width="341" height="77.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Multiple Apester Units List" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MD4-uu-SvT">
+                                                    <rect key="frame" x="16" y="0.0" width="324" height="77.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="qWs-3Z-apY" kind="push" id="VUL-Op-KVb"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="LMb-PD-XyA" id="bci-v8-eN8"/>
+                            <outlet property="delegate" destination="LMb-PD-XyA" id="bsR-ba-g8h"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="ApesterKit Demo" id="nBi-HY-uV0"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eEB-SW-ugs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="800.79999999999995" y="834.33283358320841"/>
+        </scene>
+        <!--Embeded ApesterUnit-->
+        <scene sceneID="Lrc-WI-8EY">
+            <objects>
+                <viewController id="HxZ-9m-hf0" customClass="APEViewController" customModule="ApisterKitDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xyV-7I-Fa9"/>
+                        <viewControllerLayoutGuide type="bottom" id="y9H-oR-luJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7BG-4d-2iX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="BiK-Pv-Izb">
+                                <rect key="frame" x="56.5" y="74" width="262.5" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="TwC-Au-wmj"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="UI WebView"/>
+                                    <segment title="WK WebView"/>
+                                </segments>
+                                <connections>
+                                    <action selector="onSegmentControlChange:" destination="HxZ-9m-hf0" eventType="valueChanged" id="Adb-VZ-U8F"/>
+                                </connections>
+                            </segmentedControl>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LOH-W7-6fm">
+                                <rect key="frame" x="0.0" y="112" width="375" height="555"/>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="LOH-W7-6fm" firstAttribute="top" secondItem="BiK-Pv-Izb" secondAttribute="bottom" constant="10" id="9uS-tW-RXx"/>
+                            <constraint firstItem="y9H-oR-luJ" firstAttribute="top" secondItem="LOH-W7-6fm" secondAttribute="bottom" id="B6A-IN-bs0"/>
+                            <constraint firstAttribute="trailing" secondItem="LOH-W7-6fm" secondAttribute="trailing" id="LmZ-om-lI2"/>
+                            <constraint firstItem="BiK-Pv-Izb" firstAttribute="width" secondItem="7BG-4d-2iX" secondAttribute="width" multiplier="0.7" id="VYR-O9-Fub"/>
+                            <constraint firstItem="BiK-Pv-Izb" firstAttribute="top" secondItem="xyV-7I-Fa9" secondAttribute="bottom" constant="10" id="W0R-vV-FZb"/>
+                            <constraint firstItem="BiK-Pv-Izb" firstAttribute="centerX" secondItem="7BG-4d-2iX" secondAttribute="centerX" id="WO4-37-6cY"/>
+                            <constraint firstItem="LOH-W7-6fm" firstAttribute="leading" secondItem="7BG-4d-2iX" secondAttribute="leading" id="hde-Rc-Wfc"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Embeded ApesterUnit" largeTitleDisplayMode="never" id="xXl-kV-DTc"/>
+                    <connections>
+                        <outlet property="contentView" destination="LOH-W7-6fm" id="ii8-RU-0tT"/>
+                        <outlet property="segmentControl" destination="BiK-Pv-Izb" id="Xmb-ZV-YeK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kv7-7D-b9R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1936.8" y="88.605697151424295"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="0XG-4P-gmd">
+        <scene sceneID="PD7-rd-ZBd">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UwZ-KA-kts" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oXn-ea-6sv" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="Lrj-sX-k9b">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="y7p-kr-UjG">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.92941176469999998" green="0.23921568630000001" blue="0.23921568630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="qWs-3Z-apY" kind="relationship" relationship="rootViewController" id="D0h-Lm-9ZN"/>
+                        <segue destination="LMb-PD-XyA" kind="relationship" relationship="rootViewController" id="LTW-eZ-WmY"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Wje-W3-uBR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WSF-ld-FTc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="332" y="128"/>
+            <point key="canvasLocation" x="46" y="834"/>
         </scene>
     </scenes>
 </document>
