--- a/Apester/Main.storyboard
+++ b/Apester/Main.storyboard
@@ -32,7 +32,7 @@
         <!--ApesterKit Demo-->
         <scene sceneID="QTM-lg-cc7">
             <objects>
-                <tableViewController id="LMb-PD-XyA" customClass="APEHomeTableViewController" customModule="Apester" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="LMb-PD-XyA" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Ckd-Cj-vZS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -195,40 +195,21 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ihB-7R-J5W">
                                 <rect key="frame" x="0.0" y="116" width="375" height="128"/>
-                                <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ZA-2m-qga">
-                                <rect key="frame" x="0.0" y="244" width="375" height="128"/>
-                                <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="Knk-Bu-VLM"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nDV-BG-nJx">
-                                <rect key="frame" x="0.0" y="372" width="375" height="128"/>
-                                <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="foD-l9-Hd8"/>
+                                    <constraint firstAttribute="height" constant="128" id="nOg-DX-jNQ"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="dkN-SG-8z9" firstAttribute="top" secondItem="nDV-BG-nJx" secondAttribute="bottom" priority="999" constant="167" id="8Qp-XN-XLX"/>
                             <constraint firstItem="ihB-7R-J5W" firstAttribute="leading" secondItem="ben-VV-yfm" secondAttribute="leading" id="BxH-XC-Cf0"/>
-                            <constraint firstItem="nDV-BG-nJx" firstAttribute="leading" secondItem="ben-VV-yfm" secondAttribute="leading" id="D0W-fs-F5D"/>
-                            <constraint firstItem="3ZA-2m-qga" firstAttribute="centerX" secondItem="ben-VV-yfm" secondAttribute="centerX" id="D76-IH-IZY"/>
-                            <constraint firstItem="nDV-BG-nJx" firstAttribute="top" secondItem="3ZA-2m-qga" secondAttribute="bottom" id="EYZ-sz-Z8Z"/>
                             <constraint firstAttribute="trailing" secondItem="ihB-7R-J5W" secondAttribute="trailing" id="Hbr-qX-LMf"/>
-                            <constraint firstItem="3ZA-2m-qga" firstAttribute="top" secondItem="ihB-7R-J5W" secondAttribute="bottom" id="JTq-Yo-zBW"/>
-                            <constraint firstItem="3ZA-2m-qga" firstAttribute="leading" secondItem="ben-VV-yfm" secondAttribute="leading" id="Q6F-xt-icy"/>
-                            <constraint firstAttribute="trailing" secondItem="nDV-BG-nJx" secondAttribute="trailing" id="hYh-3x-Xqu"/>
                             <constraint firstItem="ihB-7R-J5W" firstAttribute="top" secondItem="ZL4-IJ-CHq" secondAttribute="bottom" id="y8L-ak-dqs"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="containerView1" destination="ihB-7R-J5W" id="pyM-Oo-Xcr"/>
-                        <outlet property="containerView2" destination="nDV-BG-nJx" id="ytn-vn-4Zr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NJ9-nH-Dfx" userLabel="First Responder" sceneMemberID="firstResponder"/>
